htslib/htslib/hts.h

typedef struct BGZF BGZF;
struct cram_fd;
struct hFILE;
typedef struct __kstring_t {
    size_t l, m;
    char *s;
} kstring_t;
enum htsExactFormat {
    unknown_format,
    binary_format, text_format,
    sam, bam, bai, cram, crai, vcf, bcf, csi, gzi, tbi, bed,
    format_maximum = 32767
};
enum htsCompression {
    no_compression, gzip, bgzf, custom,
    compression_maximum = 32767
};
typedef struct htsFormat {
    enum htsFormatCategory category;
    enum htsExactFormat format;
    struct htsVersion version;
    enum htsCompression compression;
    short compression_level;  
    void *specific;  
} htsFormat;
typedef struct {
    uint32_t is_bin:1, is_write:1, is_be:1, is_cram:1, dummy:28;
    int64_t lineno;
    kstring_t line;
    char *fn, *fn_aux;
    union {
        BGZF *bgzf;
        struct cram_fd *cram;
        struct hFILE *hfile;
        void *voidp;
    } fp;
    htsFormat format;
} htsFile;
extern const unsigned char seq_nt16_table[256];
const char *hts_version(void);
htsFile *hts_open(const char *fn, const char *mode);
int hts_close(htsFile *fp);
int hts_getline(htsFile *fp, int delimiter, kstring_t *str);
char **hts_readlines(const char *fn, int *_n);
char **hts_readlist(const char *fn, int is_file, int *_n);
int hts_set_threads(htsFile *fp, int n);
int hts_set_fai_filename(htsFile *fp, const char *fn_aux);
struct __hts_idx_t;
typedef struct __hts_idx_t hts_idx_t;
typedef struct {
    uint64_t u, v;
} hts_pair64_t;
typedef int hts_readrec_func(BGZF *fp, void *data, void *r, int *tid, int *beg, int *end);
typedef struct {
    uint32_t read_rest:1, finished:1, dummy:29;
    int tid, beg, end, n_off, i;
    int curr_tid, curr_beg, curr_end;
    uint64_t curr_off;
    hts_pair64_t *off;
    hts_readrec_func *readrec;
    struct {
        int n, m;
        int *a;
    } bins;
} hts_itr_t;
    hts_idx_t *hts_idx_init(int n, int fmt, uint64_t offset0, int min_shift, int n_lvls);
    void hts_idx_destroy(hts_idx_t *idx);
    int hts_idx_push(hts_idx_t *idx, int tid, int beg, int end, uint64_t offset, int is_mapped);
    void hts_idx_finish(hts_idx_t *idx, uint64_t final_offset);
int hts_idx_save(const hts_idx_t *idx, const char *fn, int fmt);
hts_idx_t *hts_idx_load(const char *fn, int fmt);
    uint8_t *hts_idx_get_meta(hts_idx_t *idx, int *l_meta);
    void hts_idx_set_meta(hts_idx_t *idx, int l_meta, uint8_t *meta, int is_copy);
const char *hts_parse_reg(const char *str, int *beg, int *end);
    hts_itr_t *hts_itr_query(const hts_idx_t *idx, int tid, int beg, int end, hts_readrec_func *readrec);
    void hts_itr_destroy(hts_itr_t *iter);
    typedef int (*hts_name2id_f)(void*, const char*);
    typedef const char *(*hts_id2name_f)(void*, int);
    typedef hts_itr_t *hts_itr_query_func(const hts_idx_t *idx, int tid, int beg, int end, hts_readrec_func *readrec);
    hts_itr_t *hts_itr_querys(const hts_idx_t *idx, const char *reg, hts_name2id_f getid, void *hdr, hts_itr_query_func *itr_query, hts_readrec_func *readrec);
    int hts_itr_next(BGZF *fp, hts_itr_t *iter, void *r, void *data);
    const char **hts_idx_seqnames(const hts_idx_t *idx, int *n, hts_id2name_f getid, void *hdr); 
    int hts_file_type(const char *fname);
static inline int hts_reg2bin(int64_t beg, int64_t end, int min_shift, int n_lvls)
{
    int l, s = min_shift, t = ((1<<((n_lvls<<1) + n_lvls)) - 1) / 7;
    for (--end, l = n_lvls; l > 0; --l, s += 3, t -= 1<<((l<<1)+l))
        if (beg>>s == end>>s) return t + (beg>>s);
    return 0;
}